# arch-diagram-scratch-public

./: .npmrc  index.js  package.json
.github/workflows/: codesee-arch-diagram.yml  codesee-map-generate.yml  codesee-map-publish.yml
python-simple-repo/: README.md  setup.cfg
python-simple-repo/src/simple_package/: simple.py
python-simple-repo/src/simple_package/tests/: test_simple.py
