[metadata]
name = simple-package-CodeSee
version = 0.0.1
author = CodeSee
author_email = cubes@codesee.io
description = A simple package we use to test CodeSee Maps tooling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Codesee-io/codesee/
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
test = pytest

[options.packages.find]
where = src
